--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -7,3 +7,10 @@ $main-content-background-color: #f6f6f6;
 
 $nav-color-inactive: #333;
 $nav-color-active: white;
+
+$green: rgb(132, 204, 56);
+$blue: rgb(21, 183, 229);
+$yellow: rgb(255, 196, 0);
+$orange: rgb(255, 98, 37);
+$red: rgb(225, 25, 13);
+$petrol: rgb(0, 190, 180);
