--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -1,3 +1,6 @@
+@import "compass/utilities/color";
+@import "button_styles";
+
 @font-face {
   font-family: 'Varela Round';
   src: url('../fonts/VarelaRound-Regular.ttf') format('truetype');
