--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -17,6 +17,13 @@
     padding: 15px;
     color: #999;
     font-size: 1.2em;
+
+    span {
+      cursor: pointer;
+    }
+    span.active {
+      color: #333;
+    }
   }
   .content-body {
     padding: 15px;
