--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -1,5 +1,6 @@
 @import "compass/utilities/color";
 @import "button_styles";
+@import "entypo_styles";
 
 @font-face {
   font-family: 'Varela Round';
