Distinguish between different trees and display avatar
Started to distinguish between personal tree and tree of a buddy.
Correctly read binary messages.
Load avatars of trees.
Display avatars with new knockout bindings.

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -49,6 +49,10 @@ body {
 
     li {
       cursor: pointer;
+      padding: 5px;
+      & > * {
+        vertical-align: middle;
+      }
     }
     li.active {
       color: $nav-color-active;
