--- a/css/global.css
+++ b/css/global.css
@@ -93,10 +93,11 @@ span.entypo {
 .user-content {
   color: #222; }
   .user-content .user-head {
-    padding: 20px;
-    border-bottom: 1px solid #eee; }
+    padding: 10px 20px;
+    margin: 0px 20px;
+    display: block; }
     .user-content .user-head .user-name {
-      font-size: 3.5em; }
+      font-size: 3em; }
 
 input {
   background: white;
@@ -104,6 +105,16 @@ input {
   border-radius: 3px;
   padding: 3px;
   box-shadow: inset 0 0 1px #ddd; }
+
+img.avatar-big {
+  height: 100px;
+  width: 100px;
+  border-radius: 50px; }
+
+img.avatar-small {
+  height: 34px;
+  width: 34px;
+  border-radius: 17px; }
 
 * {
   margin: 0px;
@@ -120,10 +131,10 @@ body {
   flex-direction: row; }
 
 .nav-main {
-  width: 200px;
+  width: 300px;
   height: 100%;
   background: #222222;
-  color: #333333; }
+  color: #666666; }
   .nav-main .nav-logo {
     text-align: center;
     font-size: 2.5em;
@@ -134,13 +145,16 @@ body {
     margin: 10px 0px 5px 0px;
     padding-left: 20px; }
   .nav-main hr {
-    border: 1px solid #333333; }
+    border: 1px solid #666666; }
   .nav-main ul.nav-list {
     list-style: none;
     margin: 10px 20px;
     font-size: 1.2em; }
     .nav-main ul.nav-list li {
-      cursor: pointer; }
+      cursor: pointer;
+      padding: 5px; }
+      .nav-main ul.nav-list li > * {
+        vertical-align: middle; }
     .nav-main ul.nav-list li.active {
       color: white; }
 
