--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -36,11 +36,12 @@
   color: #222;
 
   .user-head {
-    padding: 20px;
-    border-bottom: 1px solid #eee;
+    padding: 10px 20px;
+    margin: 0px 20px;
+    display: block;
 
     .user-name {
-      font-size: 3.5em;
+      font-size: 3em;
     }
   }
 }
@@ -51,4 +52,15 @@ input {
   border-radius: 3px;
   padding: 3px;
   box-shadow: inset 0 0 1px #ddd;
+}
+
+img.avatar-big {
+  height: 100px;
+  width: 100px;
+  border-radius: 50px;
+}
+img.avatar-small {
+  height: 34px;
+  width: 34px;
+  border-radius: 17px;
 }
