--- a/css/global.css
+++ b/css/global.css
@@ -12,6 +12,12 @@
 .input-label {
   text-align: right; }
 
+:focus {
+  outline: none; }
+
+::-moz-focus-inner {
+  border: 0; }
+
 .btn, .btn-blue, .btn-green, .btn-yellow, .btn-red, .btn-orange, .btn-petrol {
   background: #f6f6f6;
   border: 1px solid #ededed;
@@ -23,37 +29,29 @@
 
 .btn-blue, .btn-green, .btn-yellow, .btn-red, .btn-orange, .btn-petrol {
   color: white;
-  border: 1px solid rgba(0, 0, 0, 0); }
+  border: none; }
+  .btn-blue:hover, .btn-green:hover, .btn-yellow:hover, .btn-red:hover, .btn-orange:hover, .btn-petrol:hover {
+    box-shadow: inset 0 0 5px #888; }
+  .btn-blue:active, .btn-green:active, .btn-yellow:active, .btn-red:active, .btn-orange:active, .btn-petrol:active {
+    box-shadow: inset 0 0 5px #333; }
 
 .btn-blue {
-  background: #40c7ed; }
-  .btn-blue:hover {
-    background: #15b7e5; }
+  background: #15b7e5; }
 
 .btn-green {
-  background: #9dd661; }
-  .btn-green:hover {
-    background: #84cc38; }
+  background: #84cc38; }
 
 .btn-yellow {
-  background: #ffd033; }
-  .btn-yellow:hover {
-    background: #ffc400; }
+  background: #ffc400; }
 
 .btn-orange {
-  background: #ff8758; }
-  .btn-orange:hover {
-    background: #ff6225; }
+  background: #ff6225; }
 
 .btn-red {
-  background: #f3392e; }
-  .btn-red:hover {
-    background: #e1190d; }
+  background: #e1190d; }
 
 .btn-petrol {
-  background: #00f1e4; }
-  .btn-petrol:hover {
-    background: #00beb4; }
+  background: #00beb4; }
 
 @font-face {
   font-family: 'Entypo';
