--- a/css/global.css
+++ b/css/global.css
@@ -180,3 +180,23 @@ body {
   width: 380px; }
   .login .input-label {
     width: 190px; }
+
+#loading-indicator {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  overflow-x: hidden;
+  background: repeating-linear-gradient(-45deg, #15b7e5, #15b7e5 5px, #74d2ec 5px, #74d2ec 10px);
+  z-index: 9001;
+  border-bottom: 1px solid #888; }
+  #loading-indicator.active {
+    animation: slide infinite 0.2s linear;
+    display: block; }
+
+@keyframes slide {
+  0% {
+    background-position: 0px; }
+
+  100% {
+    background-position: 14px; } }
