--- a/scss/global.scss
+++ b/scss/global.scss
@@ -77,3 +77,28 @@ body {
     width: 190px;
   }
 }
+
+#loading-indicator {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  overflow-x: hidden;
+  background: repeating-linear-gradient(-45deg, $blue, $blue 5px, #74d2ec 5px, #74d2ec 10px);
+  z-index: 9001;
+  border-bottom: 1px solid #888;
+
+  &.active {
+    animation: slide infinite 0.2s linear;
+    display:block;
+  }
+}
+
+@keyframes slide {
+  0% {
+    background-position: 0px;
+  }
+  100% {
+    background-position: 14px;
+  }
+}
