--- a/css/global.css
+++ b/css/global.css
@@ -126,6 +126,21 @@ img.avatar-small {
   .button-bar span {
     cursor: pointer; }
 
+.notification {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+  width: 200px;
+  background: #333;
+  color: white;
+  margin: auto;
+  z-index: 9001;
+  padding: 10px;
+  border-radius: 2px;
+  box-shadow: 0 0 3px 1px #666;
+  font-size: 0.85em; }
+
 * {
   margin: 0px;
   padding: 0px;
