--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -10,7 +10,7 @@
 .content-block {
   background: white;
   border-radius: 2px;
-  display: inline-block;
+  display: block;
   box-shadow: 0px 0px 3px #ddd;
 
   .content-head {
@@ -86,4 +86,9 @@ img.avatar-small {
   border-radius: 2px;
   box-shadow: 0 0 3px 1px #666;
   font-size: 0.85em;
+}
+
+.post {
+  width: 300px;
+  margin: 10px auto;
 }
